--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
         <assertj.version>2.8.0</assertj.version>
-        <mockito.version>2.12.0</mockito.version>
+        <mockito.version>2.8.9</mockito.version>
         <powermock.version>1.7.3</powermock.version>
         <redisson.version>3.5.5</redisson.version>
         <dom4j.version>1.6.1</dom4j.version>
@@ -221,13 +221,13 @@
 
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito</artifactId>
+                <artifactId>powermock-module-junit4</artifactId>
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-module-junit4</artifactId>
+                <artifactId>powermock-api-mockito2</artifactId>
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
