--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M7</version>
+        <!--<version>2.0.0.M7</version>-->
+        <version>1.5.9.RELEASE</version>
     </parent>
 
     <dependencyManagement>
@@ -178,7 +179,6 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
                 <version>${commons-collections.version}</version>
-                <optional>true</optional>
             </dependency>
             <!-- OPTIONAL end -->
 
@@ -288,6 +288,7 @@
                 <artifactId>shiro-spring</artifactId>
                 <version>${shiro.verion}</version>
             </dependency>
+
 
         </dependencies>
     </dependencyManagement>
